# hydrogen

./: .dockerignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  compose.yaml  config.toml  crowdin.yml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: check-code.yml  check.yml  docker.yml
assets/langs/: de.json  en-US.json  es-419.link  es-ES.json  pt-BR.json  zh-TW.json
hydrogen/: Cargo.toml
hydrogen-bot/: Cargo.toml
hydrogen-cli/: Cargo.toml
hydrogen-handler/: Cargo.toml
hydrogen-i18n/: CHANGELOG.md  Cargo.toml  README.md
hydrogen-i18n/src/: lib.rs
hydrogen-player/: Cargo.toml
hydrogen-player/src/: _legacy_manager.rs  lavalink.rs  lib.rs  manager.rs  utils.rs
hydrogen-player/src/backend/: lavalink.rs  mod.rs
hydrogen-player/src/engine/: lavalink.rs  mod.rs
hydrogen-types/: Cargo.toml
hydrolink/: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
hydrolink/src/: common.rs  filters.rs  internal.rs  lib.rs  parser.rs  rest.rs  websocket.rs
src/: commands.rs  config.rs  handler.rs  i18n.rs  lang.rs  lavalink.rs  main.rs  manager.rs  parsers.rs  player.rs  roll.rs  utils.rs
src/commands/: about.rs  join.rs  mod.rs  play.rs  roll.rs  seek.rs
src/components/: loop_switch.rs  mod.rs  pause.rs  prev.rs  skip.rs  stop.rs
src/lavalink/: mod.rs  rest.rs  websocket.rs
src/test/: lang.rs
