[package]
name = "hydrogen"
version = "0.0.1-alpha.4"
authors = ["Nashira Deer <nashiradeer@gmail.com>"]
edition = "2021"
description = "An open-source music bot for Discord, powered by Lavalink."
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["discord", "lavalink", "music"]
publish = false

[dependencies]
async-trait = "0.1.68"
futures = "0.3.28"
rand = "0.8.5"
rustls = "0.22.0"
serde_json = "1.0.99"
tokio-rustls = "0.25.0"
tracing = "0.1.37"

[dependencies.async-tungstenite]
package = "async-tungstenite"
version = "0.24.0"
features = ["tokio-runtime", "tokio-rustls-webpki-roots"]

[dependencies.reqwest]
package = "reqwest"
version = "0.11.18"
default-features = false
features = ["rustls-tls-webpki-roots", "json"]

[dependencies.serde]
package = "serde"
version = "1.0.160"
features = ["derive"]

[dependencies.serenity]
package = "serenity"
version = "0.12.0"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "voice",
    "rustls_backend",
]

[dependencies.songbird]
package = "songbird"
version = "0.4.0"
default-features = false
features = ["gateway", "serenity", "rustls"]

[dependencies.tokio]
package = "tokio"
version = "1.27.0"
features = ["macros", "rt-multi-thread"]

[dependencies.tracing-subscriber]
package = "tracing-subscriber"
version = "0.3.17"
features = ["env-filter"]
