[package]
name = "hydrogen"
version = "0.0.1-alpha.5"
authors = ["Nashira Deer <nashiradeer@gmail.com>"]
edition = "2021"
description = "An open-source music bot for Discord, powered by Lavalink."
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["discord", "lavalink", "music"]
publish = false

[features]
default = ["builtin-language"]
# Enable the builtin default language. (default)
# Don't disable if you will build using the provided Dockerfile because the image willn't include the 'en-US' language file.
builtin-language = []

[dependencies]
async-trait = "0.1.68"
dashmap = "5.5.3"
futures = "0.3.28"
rand = "0.8.5"
regex = "1.10.3"
rustls = "0.23.1"
serde_json = "1.0.99"
tokio-rustls = "0.25.0"
toml = "0.8.10"
tracing = "0.1.37"

[dependencies.async-tungstenite]
package = "async-tungstenite"
version = "0.25.0"
features = ["tokio-runtime", "tokio-rustls-webpki-roots"]

[dependencies.clap]
version = "4.5.1"
features = ["derive"]

[dependencies.hydrogen-i18n]
package = "hydrogen-i18n"
version = "2.0.0"
default-features = false
features = ["serenity"]

[dependencies.reqwest]
package = "reqwest"
version = "0.11.18"
default-features = false
features = ["rustls-tls-webpki-roots", "json"]

[dependencies.serde]
package = "serde"
version = "1.0.160"
features = ["derive"]

[dependencies.serenity]
package = "serenity"
version = "0.12.0"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "voice",
    "rustls_backend",
]

[dependencies.songbird]
package = "songbird"
version = "0.4.0"
default-features = false
features = ["gateway", "serenity", "rustls"]

[dependencies.tokio]
package = "tokio"
version = "1.27.0"
features = ["macros", "rt-multi-thread"]

[dependencies.tracing-subscriber]
package = "tracing-subscriber"
version = "0.3.17"
features = ["env-filter"]
