[package]
name = "hydrogen-player"
version = "1.0.0"
authors = ["Nashira Deer <nashiradeer@gmail.com>"]
edition = "2021"
description = "Initialize and manage music playback in Discord voice chats."
repository = "https://github.com/nashiradeer/hydrogen"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["discord", "hydrogen", "player", "music", "song"]
categories = ["data-structures", "multimedia::audio"]
